adjust header spacing closing issue #51

--- a/src/css/header.less
+++ b/src/css/header.less
@@ -84,6 +84,7 @@ header.splash {
     text-align: center;
     margin: 0;
     padding: 5px 0;
+    padding-top: 30px;
 
     @media @mobile {
       font-size: 30px;
