--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -10,7 +10,7 @@ body {
   text-align: center;
   color: #ccc;
   font-size: .85rem;
-  padding: 2rem 0;
+  padding: 1rem 0;
   text-shadow: 0 2px fade(black, 20%);
 
   // @media @mobile-above {
